# token-ticker

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ZH.md
docs/: README.md
docs/adr/: ADR-0001-esp-idf-first.md  README.md
docs/architecture/: board-bringup-interface-map.md  provider-abstraction.md  provisioning-and-config.md  refresh-and-sync-policy.md  repo-layout.md  roadmap.md  runtime-scheduler.md  serial-config-protocol.md  sleep-schedule-and-manual-wake.md  ui-home-screen-proposal.md
docs/examples/: sdcard-config.example.json
docs/harness/: README.md  agent-workflow.md  testing-and-validation.md
docs/questions/: decision-checklist.md
docs/research/: README.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/app/: CMakeLists.txt  app_bootstrap.c  app_bootstrap.h  app_key_input.c  app_key_input.h  app_runtime.c  app_runtime.h  app_scheduler.c  app_scheduler.h  app_sleep_schedule.c  app_sleep_schedule.h
firmware/app/test/: CMakeLists.txt  test_app_scheduler.c  test_app_sleep_schedule.c
firmware/domain/: CMakeLists.txt  app_config.c  app_config.h  app_runtime_mode.h  provider_poll_state.c  provider_poll_state.h  provider_snapshot.c  provider_snapshot.h  refresh_policy.c  refresh_policy.h  snapshot_fingerprint.c  snapshot_fingerprint.h
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/providers/: provider_interface.h
firmware/test/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/ui/: CMakeLists.txt  ui_app.c  ui_app.h  ui_boot_model.c  ui_boot_model.h  ui_home_screen.c  (+5 more)
(+66 files in other folders)
